<resources>
    <string name="app_name">FullRecyclerView</string>
    <string name="retry">Retry</string>
    <string name="main_menu_grid">Grid</string>
    <string name="main_menu_list">Drag list</string>
    <string name="main_menu_swipe_list">Swipe list</string>
    <string name="main_menu_horizontal_list">Horizontal list</string>
    <string name="main_menu_vertical_list">Vertical list</string>
    <string name="main_menu_multiple">Multiple choice</string>
    <string name="main_menu_single_list">Single choice</string>
    <string name="main_menu_snap_list">Snap</string>
    <string name="main_menu_animation">Animation</string>
    <string name="main_menu_sections">Sections</string>
    <string name="main_menu_indexed">Indexed</string>
    <string name="main_menu_add_favorites">Add Favorites</string>
    <string name="main_menu_section_with_line">Section with line</string>
    <string name="main_menu_sticky_header">Sticky header</string>
    <string name="main_menu_chat">Chat</string>
    <string name="main_menu_update_data">Update data</string>
    <string name="main_menu_update_data_single">Change to Single</string>
    <string name="main_menu_update_data_multiple">Change to Multiple</string>
    <string name="main_menu_multiple_clicks">Multiple clicks</string>
    <string name="swipe_recycler_view_adapter_delete">Deleted</string>
    <string name="swipe_recycler_view_adapter_edit">Ed</string>
    <string name="swipe_recycler_view_adapter_click"> onClick : </string>
    <string name="swipe_item_list_edit">Edit</string>
    <string name="swipe_item_list_delete">Delete</string>
    <string name="expandable_fragment_title">Expandable</string>
    <string name="vertical_fragment_title_dialog_delete">Delete item</string>
    <string name="vertical_fragment_question_delete">Are you sure you want to delete this item?</string>
    <string name="vertical_fragment_title_dialog_add">Add item</string>
    <string name="vertical_fragment_question_add">Are you sure you want to add new item?</string>
    <string name="add_favorites_title">Favorites</string>
    <string name="add_favorites_no_favorites">No Favorites</string>
    <string name="the_developer_world_is_yours">The developer world is yours</string>
    <string name="sticky_header_button_update">Start Update</string>
    <string name="sticky_header_button_reverse">Is reverse</string>
    <string-array name="fruits_array">
        <item>Apples</item>
        <item>Apricots</item>
        <item>Avocado</item>
        <item>Annona</item>
        <item>Banana</item>
        <item>Bilberry</item>
        <item>Blackberry</item>
        <item>Custard Apple</item>
        <item>Clementine</item>
        <item>Cantalope</item>
        <item>Coconut</item>
        <item>Currant</item>
        <item>Cherry</item>
        <item>Cherimoya</item>
        <item>Date</item>
        <item>Damson</item>
        <item>Durian</item>
        <item>Elderberry</item>
        <item>Fig</item>
        <item>Feijoa</item>
        <item>Grapefruit</item>
        <item>Grape</item>
        <item>Gooseberry</item>
        <item>Guava</item>
        <item>Honeydew melon</item>
        <item>Huckleberry</item>
        <item>Jackfruit</item>
        <item>Juniper Berry</item>
        <item>Jambul</item>
        <item>Jujube</item>
        <item>Kiwi</item>
        <item>Kumquat</item>
        <item>Lemons</item>
        <item>Limes</item>
        <item>Lychee</item>
        <item>Mango</item>
        <item>Mandarin</item>
        <item>Mangostine</item>
        <item>Nectaraine</item>
        <item>Orange</item>
        <item>Olive</item>
        <item>Prunes</item>
        <item>Pears</item>
        <item>Plum</item>
        <item>Pineapple</item>
        <item>Peach</item>
        <item>Papaya</item>
        <item>Passionfruit</item>
        <item>Pomegranate</item>
        <item>Pomelo</item>
        <item>Raspberries</item>
        <item>Rock melon</item>
        <item>Rambutan</item>
        <item>Strawberries</item>
        <item>Sweety</item>
        <item>Salmonberry</item>
        <item>Satsuma</item>
        <item>Tangerines</item>
        <item>Tomato</item>
        <item>Ugli</item>
        <item>Watermelon</item>
        <item>Woodapple</item>
    </string-array>
</resources>