<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_menu_list"
        android:title="@string/main_menu_list" />

    <item
        android:id="@+id/main_menu_grid"
        android:title="@string/main_menu_grid" />

    <item
        android:id="@+id/main_menu_swipe_list"
        android:title="@string/main_menu_swipe_list" />

    <item
        android:id="@+id/main_menu_horizontal_list"
        android:title="@string/main_menu_horizontal_list" />

    <item
        android:id="@+id/main_menu_vertical_list"
        android:title="@string/main_menu_vertical_list" />

    <item
        android:id="@+id/main_menu_expandable"
        android:title="@string/expandable_fragment_title" />

    <item
        android:id="@+id/main_menu_multiple"
        android:title="@string/main_menu_multiple" />

    <item
        android:id="@+id/main_menu_single"
        android:title="@string/main_menu_single_list" />

    <item
        android:id="@+id/main_menu_snap"
        android:title="@string/main_menu_snap_list" />

    <item
        android:id="@+id/main_menu_animation"
        android:title="@string/main_menu_animation" />

    <item
        android:id="@+id/main_menu_section"
        android:title="@string/main_menu_sections" />

    <item
        android:id="@+id/main_menu_indexed"
        android:title="@string/main_menu_indexed" />

    <item
        android:id="@+id/main_menu_add_favorites"
        android:title="@string/main_menu_add_favorites" />

    <item
        android:id="@+id/main_menu_section_with_line"
        android:title="@string/main_menu_section_with_line" />

    <item android:id="@+id/main_menu_sticky_header"
        android:title="@string/main_menu_sticky_header"/>

    <item
        android:id="@+id/main_menu_add_item"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/main_menu_vertical_list"
        app:showAsAction="always" />

</menu>